<resources>
    <string name="app_name">MaapPeliculas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- INSERTAR PELICULA -->
    <string name="title_fragment">Insertar Pelicula</string>
    <string name="title">TITULO</string>
    <string name="description">DESCRIPCIÓN</string>
    <string name="duration">DURACIÓN</string>
    <string name="year">AÑO DE LANZAMIENTO</string>
    <string name="director">DIRECTOR</string>
    <string name="category">CATEGORIA</string>
    <string name="id">ID</string>
    <string name="btn_insertar_pelicula">INSERTAR PELICULA</string>
    <!-- VISUALIZAR PELICULAS -->
    <string name="title_visualizar">PELICULAS</string>

    <!-- MENU -->
    <string name="menu_registrar">REGISTRAR PELICULAS</string>
    <string name="menu_listar">LISTAR PELICULAS</string>
    <string name="menu_consultar">CONSULTAR PELICULA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>